Quartz sync: Feb 12, 2024, 10:44 AM

--- a/content/프로그래밍/Lua/루아-시작.md
+++ b/content/프로그래밍/Lua/루아-시작.md
@@ -1,5 +1,5 @@
 ---
-title: 루아-시작
+title: 시작
 tags:
   - 루아
 date: 2024-02-11T20:23:00
@@ -7,7 +7,73 @@ date: 2024-02-11T20:23:00
 ---
 # 시작
 
-##
+Hello World 출력
+
+```lua
+print("Hello World")
+```
+
+루아 파일 및 인터프리터 실행
+
+```bash
+$lua hello.lua
+
+$lua
+Lua 5.4.2  Copyright (C) 1994-2020 Lua.org, PUC-Rio
+>
+```
+
+키워드
+
+| `and` | `break` | `do` | `else` | `elseif` |
+| ---- | ---- | ---- | ---- | ---- |
+| `end` | `false` | `for` | `function` | `goto` |
+| `if` | `in` | `local` | `nil` | `not` |
+| `or` | `repeat` | `return` | `then` | `true` |
+| `until` | `while` |  |  |  |
+
+주석
+
+```lua
+-- single comment
+--[[
+multi-line comment
+--]]
+```
+
+타입과 값
+
+```bash
+$lua
+Lua 5.4.2  Copyright (C) 1994-2020 Lua.org, PUC-Rio
+> type(nil)
+nil
+> type(true)
+boolean
+> type(10)
+number
+> type("Hello World")
+string
+> type(io.stdin)
+userdata
+> type(print)
+function
+> type({})
+table
+> type(type(X))
+string
+```
+
+Nil
+
+다른 언어의 None, Null과 비슷한 역활을 한다. 전역변수는 디폴트로 nil 값이 할당된다.
+
+불리언
+
+루아에서는 오직 `false`와 `nil`만이 거짓으로 평가된다. 0은 아니다.
+
+
+
 
 ---
 
