Quartz sync: Feb 12, 2024, 1:56 PM

--- a/content/1. 프로그래밍/Lua/루아-입출력.md
+++ b/content/1. 프로그래밍/Lua/루아-입출력.md
@@ -6,3 +6,32 @@ date: 2024-02-12T12:20:00
 ---
 ---
 
+```lua
+io.write("sin(3) = ", math.sin(3), "\n") --> sin(3) = 0.14112...
+
+io.read("a")
+```
+
+| 읽기 | 설명 |
+| ---- | ---- |
+| "a" | 모든 파일을 읽는다 |
+| "l" | 다음줄을 읽는다(새 행 삭제) |
+| "L" | 다음줄을 읽는다(새 행 유지) |
+| "n" | 숫자를 읽는다 |
+| num | 숫자를 문자열으로 읽는다 |
+
+
+api
+
+```lua
+io.close()
+io.flush()
+io.input()
+io.lines()
+io.open()
+io.output()
+io.read()
+io.tmpfile()
+io.type()
+io.write()
+```
